# ultimattt

./: Cargo.toml  LICENSE  README.md  ascii.txt  build.rs  rust-toolchain.toml
.github/workflows/: main.yml
data/: random1-positions.txt  random1.txt  random2-positions.txt  random2.txt  random3-positions.txt  random3.txt  random4-positions.txt  random4.txt  random5-positions.txt  random5.txt  selfplay-1s-positions.txt  selfplay-1s.txt  selfplay-tt-5s-positions.txt  selfplay-tt-5s.txt
pmp/: .gitignore  aggregate.sh
profiling/: .gitignore  aggregate.sh  flatten.sh  perf2trace.go  probe2trace  record-probes  sample.sh
src/: bench.rs  game.rs  lib.rs  main.rs  minimax.rs  protocol.rs  prove.rs
src/game/: display.rs  notation.rs
src/lib/: dfpn.rs  endgame.rs  game.rs  lib.rs  minimax.rs  progress.rs  proof_status.rs  protocol.rs  prove.rs  solver_db.rs  table.rs  util.rs
src/lib/dfpn/: spdfpn.rs
src/lib/game/: display.rs  notation.rs
src/lib/prove/: dfpn.rs  node_pool.rs  pn.rs  pn_dfpn.rs  spdfpn.rs
src/lib/table/: entry_mutex.rs
src/main/: epsilon_greedy.rs  main.rs  oneoff.rs  selfplay.rs  subprocess.rs  symmetry.rs  worker.rs
src/minimax/: table.rs
src/prove/: node_pool.rs
