[package]
name = "ultimattt"
version = "0.1.0"
authors = ["Nelson Elhage <nelhage@nelhage.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "ultimattt"
path = "src/main/main.rs"

[lib]
name = "ultimattt"
path = "src/lib/lib.rs"

[[bench]]
name = "bench_ultimattt"
path = "src/bench.rs"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
ansi_term = "0.12.1"
rand = "0.7.2"
smallvec = "1.2.0"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.48"
structopt = "0.3.11"
regex = "1.3.5"
bytesize = "1.0.0"
typenum = "1.11.2"
crossbeam = "0.7.3"
parking_lot = "0.10.2"
parking_lot_core = "0.7.2"
hdrhistogram = "7.1.0"
packed_simd = "0.3.3"

[dependencies.probe]
git = "https://github.com/cuviper/rust-libprobe.git"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
vergen = "3"
